[package]
name = "wasabi-solana"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "wasabi_solana"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = {version = "0.30.1", features = ["event-cpi", "init-if-needed"]}
anchor-spl = { version = "0.30.1", features = ["metadata"] }
serde = "=1.0.201"
log = "0.4.22"
mpl-token-metadata = "5.1.0"
spl-stake-pool = "1.0.0"
