[package]
name = "wasabi-solana"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "wasabi_solana"

[features]
default = []
anchor-debug = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = {version = "0.30.1", features = ["event-cpi", "init-if-needed"]}
anchor-spl = { version = "0.30.1", features = ["metadata"] }
mpl-token-metadata = "5.1.0"
